k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-deployment
  labels:
    app: health
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health
  template:
    metadata:
      labels:
        app: health
    spec:
      containers:
        - name: health
          image: 2332323232/health-service:1.0    # <-- образ на Docker Hub
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
