k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-service
  labels:
    app: health
spec:
  selector:
    app: health
  type: ClusterIP
  ports:
    - name: http
      port: 8000          # порт сервиса внутри кластера
      targetPort: 8000    # порт контейнера
